fixed repeating sections

--- a/Shadowrun5thEdition/src/arms.html
+++ b/Shadowrun5thEdition/src/arms.html
@@ -89,7 +89,7 @@
 							</select>
 							<div class="display-row" title="Recoil Compensation"><span name="attr_recoil"></span></div>
 							<div class="display-row" title="Armor per clip"><span name="attr_ammo"></span></div>
-							<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span>i</span>
+							<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span class='pictos'>i</span>
 							<div class="collapsable">
 								<div class="desc" title="Mode options"><i><span name="attr_mode_options"></span></i></div>
 								<div class="desc" title="Range"><i><span name="attr_range"></span></i></div>
@@ -147,7 +147,7 @@
 							<div class="display-row" title="Damage"><span name="attr_damage"></span></div>
 							<div class="display-row" title="Accuracy"><span name="attr_acc"></span></div>
 							<div class="display-row" title="Armor Penetration"><span name="attr_ap"></span></div>
-							<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span>i</span>
+							<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span class='pictos'>i</span>
 							<div class="collapsable">
 								<div class="desc"><span name="attr_notes"></span></div>
 							</div>
@@ -210,7 +210,7 @@
 						<div class="display-row hoverswitch" title="Radiation protection roll"><button type="roll" name="radiation protection" value="@{gm_toggle} &{template:rolls}{{header=^{radiationprotection}}}{{base=^{body} ♦ ^{armor}}}{{dice=[[((@{body}+@{rating}+@{dicepool_modifier}+@{radiation_modifier})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">
 							<span class="default" name="attr_radiation_modifier"></span><!--<span class="hover" name="attr_radiation_protection"></span>--></button>
 						</div>
-						<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span>i</span>
+						<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span class='pictos'>i</span>
 						<div class="collapsable">
 							<div class="desc"><span name="attr_notes"></span></div>
 						</div>
