Add translation for queries

--- a/Lotfp/Lotfp.html
+++ b/Lotfp/Lotfp.html
@@ -45,7 +45,7 @@
                 <span class="sheet-subtext" data-i18n="charisma_effects"></span>
             </div>
             <div class="sheet-ability-column-roll sheet-flex">
-               <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{charisma}}} {{abilityroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Cha}]]}}" name="roll_ChaCheck"></button>
+               <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{charisma}}} {{abilityroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Cha}]]}}" name="roll_ChaCheck"></button>
             </div>
         </div>
         <div class="sheet-flex">
@@ -58,7 +58,7 @@
                 <span class="sheet-subtext" data-i18n="constitution_effects"></span>
             </div>
             <div class="sheet-ability-column-roll sheet-flex">
-               <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{constitution}}} {{abilityroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Con}]]}}" name="roll_ConCheck"></button>
+               <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{constitution}}} {{abilityroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Con}]]}}" name="roll_ConCheck"></button>
             </div>
         </div>
         <div class="sheet-flex">
@@ -71,7 +71,7 @@
                 <span class="sheet-subtext" data-i18n="dexterity_effects"></span>
             </div>
             <div class="sheet-ability-column-roll sheet-flex">
-                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{dexterity}}} {{abilityroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Dex}]]}}" name="roll_DexCheck"></button>
+                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{dexterity}}} {{abilityroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Dex}]]}}" name="roll_DexCheck"></button>
             </div>
         </div>
         <div class="sheet-flex">
@@ -84,7 +84,7 @@
                 <span class="sheet-subtext" data-i18n="intelligence_effects"></span>
             </div>
             <div class="sheet-ability-column-roll sheet-flex">
-                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{intelligence}}} {{abilityroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Int}]]}}" name="roll_IntCheck"></button>
+                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{intelligence}}} {{abilityroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Int}]]}}" name="roll_IntCheck"></button>
             </div>
         </div>
         <div class="sheet-flex">
@@ -97,7 +97,7 @@
                 <span class="sheet-subtext" data-i18n="strength_effects"></span>
             </div>
             <div class="sheet-ability-column-roll sheet-flex">
-                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{strength}}} {{abilityroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Str}]]}}" name="roll_StrCheck"></button>
+                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{strength}}} {{abilityroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Str}]]}}" name="roll_StrCheck"></button>
             </div>
         </div>
         <div class="sheet-flex">
@@ -110,7 +110,7 @@
                 <span class="sheet-subtext" data-i18n="wisdom_effects"></span>
             </div>
             <div class="sheet-ability-column-roll sheet-flex">
-                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{wisdom}}} {{abilityroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Wis}]]}}" name="roll_WisCheck"></button>
+                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{wisdom}}} {{abilityroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Wis}]]}}" name="roll_WisCheck"></button>
             </div>
         </div>
     </div>
@@ -124,31 +124,31 @@
                 <span class="sheet-svbtitle" data-i18n="paralyze"></span>
                 <input type="number" class="sheet-savingthrow" name="attr_Paralyze">
                 <span class="sheet-svnsubtext" data-i18n="paralyze_desc"></span>
-                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{paralyze}}} {{saveroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Paralyze}]]}}" name="roll_ParalyzeCheck"></button>
+                <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{paralyze}}} {{saveroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Paralyze}]]}}" name="roll_ParalyzeCheck"></button>
               </div>
               <div class="sheet-svblock">
                   <span class="sheet-svbtitle" data-i18n="poison"></span>
                   <input type="number" class="sheet-savingthrow" name="attr_Poison">
                   <span class="sheet-svnsubtext" data-i18n="poison_desc"></span>
-                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{poison}}} {{saveroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Poison}]]}}" name="roll_PoisonCheck"></button>
+                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{poison}}} {{saveroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Poison}]]}}" name="roll_PoisonCheck"></button>
               </div>
               <div class="sheet-svblock">
                   <span class="sheet-svbtitle" data-i18n="breath_weapon"></span>
                   <input type="number" class="sheet-savingthrow" name="attr_Breath">
                   <span class="sheet-svnsubtext" data-i18n="breath_weapon_desc"></span>
-                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{breath_weapon}}} {{saveroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Breath}]]}}" name="roll_BreathCheck"></button>
+                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{breath_weapon}}} {{saveroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Breath}]]}}" name="roll_BreathCheck"></button>
               </div>
               <div class="sheet-svblock">
                   <span class="sheet-svbtitle" data-i18n="magical_device"></span>
                   <input type="number" class="sheet-savingthrow" name="attr_Device">
                   <span class="sheet-svnsubtext" data-i18n="magical_device_desc"></span>
-                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{magical_device}}} {{saveroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Device}]]}}" name="roll_DeviceCheck"></button>
+                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{magical_device}}} {{saveroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Device}]]}}" name="roll_DeviceCheck"></button>
               </div>
               <div class="sheet-svblock">
                   <span class="sheet-svbtitle" data-i18n="magic"></span>
                   <input type="number" class="sheet-savingthrow" name="attr_Magic">
                   <span class="sheet-svnsubtext" data-i18n="magic_desc"></span>
-                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{magic}}} {{saveroll=[[1d20+(?{Bonus|0})]]}} {{target=[[@{Magic}]]}}" name="roll_MagicCheck"></button>
+                  <button class="sheet-ability-button" type="roll" value="&{template:lotfp_check} {{name=^{magic}}} {{saveroll=[[1d20+(?{@{bonus_query}|0})]]}} {{target=[[@{Magic}]]}}" name="roll_MagicCheck"></button>
               </div>
             </div>
         </div>
@@ -225,7 +225,7 @@
         <input type="text" name="attr_shortrange" class="sheet-bottom-line sheet-damage">
         <input type="text" name="attr_mediumrange" class="sheet-bottom-line sheet-damage">
         <input type="text" name="attr_longrange" class="sheet-bottom-line sheet-damage">
-        <button class="sheet-attack-button" type="roll" value="&{template:lotfp_check} {{name=@{weaponname}}} {{charactername=@{character_name}}} {{attackroll=[[1d20+@{attackbonus}+(?{Bonus|0})]]}} {{damageroll=[[@{weapondamage}]]}}" name="roll_Attack"></button>
+        <button class="sheet-attack-button" type="roll" value="&{template:lotfp_check} {{name=@{weaponname}}} {{charactername=@{character_name}}} {{attackroll=[[1d20+@{attackbonus}+(?{@{bonus_query}|0})]]}} {{damageroll=[[@{weapondamage}]]}}" name="roll_Attack"></button>
     </fieldset>
 </div>
 
@@ -486,7 +486,7 @@ const skills = [
     "sneak_attack",
     "stealth",
     "tinker",
-].map(x => getTranslationByKey(x));
+].map(getTranslationByKey);
 const fillRepeatingSectionFromData = (sectionName, dataList) => {
   getSectionIDs(`repeating_${sectionName}`, idList => {
     const existingRowAttributes = idList.map(id => `repeating_${sectionName}_${id}_name`);
@@ -511,6 +511,11 @@ const fillRepeatingSectionFromData = (sectionName, dataList) => {
     });
   });
 };
+on("sheet:opened", () => {
+  setAttrs({
+    bonus_query: getTranslationByKey("bonus")
+  });
+});
 // Spells prepared
 on('change:repeating_spells remove:repeating_spells', () => {
   "use strict";
