--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2832,7 +2832,7 @@
         <button name="roll_skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=^{level}}}{{dice=[[((@{level}+@{level})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}"><span name="attr_display"></span></button>
         <div class="settings">
           <h2 class="full-row" data-i18n="skill">Skill</h2>
-          <select class="skill-select" name="attr_skill" title="@{repeating_undefined_${x}_skill}">	<option value="Computer" data-i18n="computer">Computer</option>
+          <select class="skill-select" name="attr_skill" title="@{repeating_active_${x}_skill}">	<option value="Computer" data-i18n="computer">Computer</option>
 	<option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 	<option value="Electronic Warfare" data-i18n="eletronicwarfare">Electronic Warfare</option>
 	<option value="Hacking" data-i18n="hacking">Hacking</option>
