--- a/Shadowrun5thEdition/src/html/importer.html
+++ b/Shadowrun5thEdition/src/html/importer.html
@@ -45,7 +45,7 @@
     			Chummer frequently has the wrong information for <strong>Weapons</strong>. Review them in the Arms tab after clicking apply.
     		</li>
     		<li>
-    			<strong>Specializations</strong> will not be applied to Weapons or Magic. You will need to manually update the checkbox.
+    			<strong>specialization</strong> will not be applied to Weapons or Magic. You will need to manually update the checkbox.
     		</li>
     		<li>
     			<strong>Vehicles</strong> will not be imported.
