[5th Edition OGL] Typo

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -2209,10 +2209,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -2472,10 +2472,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -2731,10 +2731,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -2993,10 +2993,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -3252,10 +3252,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -3511,10 +3511,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -3773,10 +3773,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -4032,10 +4032,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -4291,10 +4291,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
@@ -4550,10 +4550,10 @@
                         <input class="details-flag" type="checkbox"><span>i</span>
                         <div class="details">
                             <button class="spell_link" type="compendium" name="attr_spellname"></button>
-                            <a class="row">
+                            <span class="row">
                                 <span name="attr_spellname"></span>
                                 <span name="attr_innate"></span>
-                            </a>
+                            </span>
                             <div class="row italics">
                                 <span name="attr_spellschool"></span>
                                 <span name="attr_spelllevel"></span>
