Update 1800 el ocaso de la humanidad.html
Corrected error on attribute names. 2 different attributes had the same name

--- a/1800 El ocaso de la humanidad/1800 el ocaso de la humanidad.html
+++ b/1800 El ocaso de la humanidad/1800 el ocaso de la humanidad.html
@@ -1474,8 +1474,8 @@
                         <div class="sheet-cell" style="text-align:center; width:200px;" ><b>Libros/Pergaminos/Notas</b></div>
                     </div>
                     <div class="sheet-style_row">
-                        <fieldset class="repeating_objetos">
-                            <input type="text" name="attr_objetos"  />
+                        <fieldset class="repeating_manuscritos">
+                            <input type="text" name="attr_manuscritos"  />
                         </fieldset>
                     </div>
                 </div>
