--- a/ChroniquesOubliees/co.htm
+++ b/ChroniquesOubliees/co.htm
@@ -237,24 +237,29 @@
       });
     });
   });
-  on('change:pnj_pv', function(eventinfo) {
-    getAttrs(['pnj_pv', 'pnj_pv_max', 'PV_max'], function(values) {
+  on('change:pnj_pv', function(eventinfo) { //fires also when pnj_pv_max changes
+    getAttrs(['pnj_pv', 'pnj_pv_max', 'PV', 'PV_max'], function(values) {
       var sta = {};
-      if (eventinfo.newValue) sta.PV = eventinfo.newValue;
+      var new_pv = parseInt(values.pnj_pv);
+      var old_pv = parseInt(values.PV);
       var new_pv_max = parseInt(values.pnj_pv_max);
       var old_pv_max = parseInt(values.PV_max);
       if (!isNaN(new_pv_max) && (isNaN(old_pv_max) || new_pv_max != old_pv_max)) { //PV max du pnj a changé
         sta.PV_max = new_pv_max;
-        var pv = parseInt(values.pnj_pv);
-        if (isNaN(old_pv_max) || isNaN(pv) || pv === 0) {
-          sta.pnj_pv = new_pv_max;
-          sta.PV = new_pv_max;
-        } else {
-          pv += new_pv_max - old_pv_max;
-          if (pv < 0) pv = 0;
-          sta.pnj_pv = pv;
-          sta.PV = pv;
+        if (isNaN(old_pv_max) || old_pv_max === 0) { //first time set pv max
+          if (isNaN(new_pv) || new_pv === 0) { //and pv is 0 or not set
+            sta.pnj_pv = new_pv_max;
+            sta.PV = new_pv_max;
+          } else sta.PV = new_pv;
+        } else if (!isNaN(new_pv) && old_pv_max > new_pv) {
+          new_pv += new_pv_max - old_pv_max;
+          if (new_pv < 0) new_pv = 0;
+          sta.pnj_pv = new_pv;
+          sta.PV = new_pv;
         }
+      } else { //PV du pnj a changé
+        sta.PV = new_pv;
+        if (isNaN(new_pv_max) || new_pv_max === 0) sta.pnj_pv_max = new_pv;
       }
       setAttrs(sta);
     });
@@ -385,6 +390,19 @@
         CHA_SUP: '@{JETNORMAL}'
       });
     }
+  });
+
+  //Mise à jour des stats dérivées
+  on('change:CHARISME', function(eventinfo) {
+    getAttrs(["CHARISME"], function(values) {
+      var charisme = parseInt(values.CHARISME);
+      if (!isNaN(charisme) && charisme > 0) {
+       var pc_max = 3 + Math.floor((parseInt(values.CHARISME) - 10) / 2);
+        setAttrs({
+          PC_max: pc_max
+        });
+      }
+    });
   });
 
   //Importation de statblocks
@@ -599,6 +617,16 @@
             } else {
               valAttr = parseInt(valAttr);
             }
+          } else if (lattr == 'pnj_pv_max') {
+            //On met aussi les pv courants à jour
+            var pvMax = parseInt(valAttr);
+            //Cas où on note entre parenhèse les PV courants
+            var caracParen = valAttr.indexOf('(');
+            if (caracParen > 0) {
+              var pvCourant = parseInt(valAttr.substring(caracParen + 1));
+              newAttrs.pnj_pv = pvCourant;
+              valAttr = valAttr.substring(0, caracParen).trim();
+            } else newAttrs.pnj_pv = pvMax;
           }
           newAttrs[lattr] = valAttr;
         });
@@ -1228,7 +1256,7 @@
                 <td class="sheet-boxtitre">Épuisement</td>
               </tr>
               <tr>
-                <td class="sheet-boxinputlight"><input type="number" name="attr_PC_max" value="3+@{CHA}" title="Points de Chance MAX (page 79)" disabled /></td>
+                <td class="sheet-boxinputlight"><input type="number" name="attr_PC_max" value="3" title="Points de Chance MAX (page 79)" /></td>
                 <td class="sheet-boxinput">
                   <input type="checkbox" name="attr_PR1" value="1" title="Point de Récupération 1 (page 80)" />
                   <input type="checkbox" name="attr_PR2" value="1" title="Point de Récupération 2 (page 80)" />
