Hc Svnt Dracones 2E: v.1.5: 'Progression Purchase Tracking' updates when changes are made to 'XP Purchase'

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.50</span>
+<span class="version bold">Sheet Version: 1.50B</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -1020,14 +1020,16 @@
 
 <!-- -------------------------------- SHEETWORKERS ---------------------------------------- -->
 <input name="attr_exp" type="hidden" value="210">
+<input name="attr_progression_credits_track" type="hidden" value="0">
 <script type="text/worker">
 
 const int = score => parseInt(score, 10) || 0;
 
-const stat = ["mind_stat","mind_perceive","body_stat", "body_perceive","community_stat","community_perceive"];
+//const stat = ["mind_stat","mind_perceive","body_stat", "body_perceive","community_stat","community_perceive"];
 
-const counter = ["1","2a","2b", "3a", "3b", "4", "5a","5b", "6a","6b", "7", "8a","8b", "9a","9b", "10", "11a","11b", "12a","12b", "13"];
+//const counter = ["1","2a","2b", "3a", "3b", "4", "5a","5b", "6a","6b", "7", "8a","8b", "9a","9b", "10", "11a","11b", "12a","12b", "13"];
 
+//All xp purchase checkboxes
 const checkboxes = ["mind_stat1","mind_stat2a","mind_stat2b", "mind_stat3a", "mind_stat3b", "mind_stat4", "mind_stata","mind_stat5b", "mind_stat6a","mind_stat6b", "mind_stat7", "mind_stat8a","mind_stat8b", "mind_stat9a","mind_stat9b", "mind_stat10", "mind_stat11a","mind_stat11b", "mind_stat12a","mind_stat12b", "mind_stat13","mind_perceive1","mind_perceive2a","mind_perceive2b", "mind_perceive3a", "mind_perceive3b", "mind_perceive4", "mind_perceive5a","mind_perceive5b", "mind_perceive6a","mind_perceive6b", "mind_perceive7", "mind_perceive8a","mind_perceive8b", "mind_perceive9a","mind_perceive9b", "mind_perceive10", "mind_perceive11a","mind_perceive11b", "mind_perceive12a","mind_perceive12b", "mind_perceive13", "body_stat1","body_stat2a","body_stat2b", "body_stat3a", "body_stat3b", "body_stat4", "body_stat5a","body_stat5b", "body_stat6a","body_stat6b", "body_stat7", "body_stat8a","body_stat8b", "body_stat9a","body_stat9b", "body_stat10", "body_stat11a","body_stat11b", "body_stat12a","body_stat12b", "body_stat13","body_perceive1","body_perceive2a","body_perceive2b", "body_perceive3a", "body_perceive3b", "body_perceive4", "body_perceive5a","body_perceive5b", "body_perceive6a","body_perceive6b", "body_perceive7", "body_perceive8a","body_perceive8b", "body_perceive9a","body_perceive9b", "body_perceive10", "body_perceive11a","body_perceive11b", "body_perceive12a","body_perceive12b", "body_perceive13", "community_stat1","community_stat2a","community_stat2b", "community_stat3a", "community_stat3b", "community_stat4", "community_stat5a","community_stat5b", "community_stat6a","community_stat6b", "community_stat7", "community_stat8a","community_stat8b", "community_stat9a","community_stat9b", "community_stat10", "community_stat11a","community_stat11b", "community_stat12a","community_stat12b", "community_stat13","community_perceive1","community_perceive2a","community_perceive2b", "community_perceive3a", "community_perceive3b", "community_perceive4", "community_perceive5a","community_perceive5b", "community_perceive6a","community_perceive6b", "community_perceive7", "community_perceive8a","community_perceive8b", "community_perceive9a","community_perceive9b", "community_perceive10", "community_perceive11a","community_perceive11b", "community_perceive12a","community_perceive12b", "community_perceive13"];
 
 const xp10a = ["mind_stat1","mind_stat2a","mind_stat2b", "mind_stat3a", "mind_stat3b","mind_perceive1","mind_perceive2a","mind_perceive2b", "mind_perceive3a", "mind_perceive3b", "body_stat1","body_stat2a","body_stat2b", "body_stat3a", "body_stat3b","body_perceive1","body_perceive2a","body_perceive2b", "body_perceive3a", "body_perceive3b", "community_stat1","community_stat2a","community_stat2b", "community_stat3a", "community_stat3b","community_perceive1","community_perceive2a","community_perceive2b", "community_perceive3a", "community_perceive3b"];
@@ -1040,17 +1042,35 @@ const xp25a = ["mind_stat10", "mind_stat11a","mind_stat11b", "mind_stat12a","min
 
 const xp30a = ["mind_stat13","mind_perceive13","body_stat13", "body_perceive13","community_stat13","community_perceive13"];
 
+//const progressiontracker = ["boons_track", "focus_track", "readiness_track", "profs_track", "move_track", "init_track", "techniques_track", "notoriety_track"];
+
+const boonstracker = ["body_stat6b","body_stat9a", "body_perceive2b", "body_perceive6b", "body_perceive11b"];
+
+const profstracker = ["mind_stat2a","mind_stat5a", "mind_stat8a","mind_stat11a", "mind_perceive3a", "mind_perceive6a","mind_perceive9a","mind_perceive12a", "body_perceive12a","community_perceive3a","community_perceive6a","community_perceive9a","community_perceive11a" ];
+
+const focustracker = ["mind_stat2b","mind_stat5b","mind_stat8b","mind_stat11b","mind_perceive3b","mind_perceive6b","mind_perceive9b","mind_perceive12b","body_stat3a","body_stat3a","body_perceive3a","body_perceive6a","body_perceive9a","community_stat2a","community_stat2a","community_stat5a","community_stat6a","community_stat9a","community_stat12a","community_perceive2a","community_perceive12a"];
+
+const readinesstracker = ["mind_stat9b","mind_stat12b","mind_perceive2b","mind_perceive5b","body_stat3b","body_stat9b","body_stat12b","bodyperceive3b","body_perceive9b","body_perceive12b","community_stat3b","community_stat6b","community_stat12b","community_perceive3b","community_perceive6b","community_perceive9b","community_perceive12b"];
+
+const movetracker = ["body_stat2a","body_stat5a","body_stat8a","body_stat11a"];
+
+const inittracker = ["body_stat5b","body_stat11b"];
+
+const techniquestracker = ["mind_stat3a","mind_stat6a","mind_stat9a","mind_stat12a","mind_perceive2a","mind_perceive5a","mind_perceive8a","mind_perceive11a","body_stat2b","body_stat2b","body_stat8b","body_stat2b","body_perceive2a","body_perceive5a","body_perceive8a","community_stat8a","community_stat11a","community_perceive5a","community_perceive8a","community_perceive5a"];
+
+const notorietytracker = ["mind_perceive8b","mind_perceive11b","body_stat6a","body_stat12a","body_perceive5b","body_perceive8b","community_stat2b","community_stat5b","community_stat8b","community_stat11b","community_perceive2b","community_perceive6b","community_perceive8b","community_perceive11b"];
+
+const creditstracker = ["community_stat3a","community_stat9b","community_stat3a"];
+
 checkboxes.forEach(checkbox => {
     on(`change:${checkbox}`, (eventInfo) => {
         console.log("checkbox changed:" + checkbox);
-        let xplist = [ checkbox, "exp_total", "exp_spent", "exp"];
+        let xplist = [ checkbox, "exp_total", "exp_spent", "exp", "boons_track", "focus_track", "readiness_track", "profs_track", "move_track", "init_track", "techniques_track", "notoriety_track", "credits", "progression_credits_track"];
         console.log(xplist);
-        console.log("xp arr printed");
         getAttrs(xplist, values => {
             let xp_total = int(values["exp_total"]);
             let xp_spent = int(values["exp_spent"]);
             let xp_current = int(values["exp"]);
-
             console.log("getAttr: exp total is:" + xp_total);
             console.log("getAttr: exp spent is:" + xp_spent);
             console.log("getAttr: exp current is:" + xp_current);
@@ -1058,7 +1078,7 @@ checkboxes.forEach(checkbox => {
             let stat = int(values[checkbox]);
             console.log("Checkbox '" + checkbox + "' value is:" + stat);
             
-
+            //checks how much this adjustment should cost, as seen at the top row of the sheet section
             if (xp15a.includes(checkbox)){
               xp = 15;
               console.log("step set to 15xp");
@@ -1081,7 +1101,7 @@ checkboxes.forEach(checkbox => {
             }
 
             if (stat === 1){
-              console.log("checkbox was checked");
+              console.log(checkbox + " was checked");
               xp_current = xp_current - xp;
               xp_spent = xp_spent + xp;
               console.log("getAttr: exp total should be:" + xp_total);
@@ -1089,7 +1109,7 @@ checkboxes.forEach(checkbox => {
               console.log("getAttr: exp current should be:" + xp_current);
             } 
             else{
-              console.log("checkbox was UNchecked");
+              console.log(checkbox + " was UNchecked");
               xp_current = xp_current + xp;
               xp_spent = xp_spent - xp;
               console.log("getAttr: exp total should be:" + xp_total);
@@ -1097,11 +1117,128 @@ checkboxes.forEach(checkbox => {
               console.log("getAttr: exp current should be:" + xp_current);
             }
 
-            //xp_current = xp_total - xp_spent;
+
+            //Updates Progression Purchase tracker section
+            let boons = int(values["boons_track"]);
+            let focus = int(values["focus_track"]);
+            let init = int(values["init_track"]);
+            let move = int(values["move_track"]);
+            let notoriety = int(values["notoriety_track"]);
+            let profs = int(values["profs_track"]);
+            let readiness = int(values["readiness_track"]);
+            let techniques = int(values["techniques_track"]);
+            
+
+            let credits = int(values["credits"]);
+            let credits_tracker = int(values["progression_credits_track"]);
+
+            //Boons
+            if (boonstracker.includes(checkbox)){
+              if(stat === 1){
+                boons = boons + 2;
+              }
+              else{
+                boons = boons - 2;
+              }
+              console.log("Total Boons Purchased: " + boons);
+            }
+            //focus
+            else if (focustracker.includes(checkbox)){
+              if(stat === 1){
+                focus = focus + 2;
+              }
+              else{
+                focus = focus - 2;
+              }
+              console.log("Total focus Purchased: " + focus);
+            }
+            //init
+            else if (inittracker.includes(checkbox)){
+              if(stat === 1){
+                init = init + 2;
+              }
+              else{
+                init = init - 2;
+              }
+              console.log("Total init Purchased: " + init);
+            }
+            //move
+            else if (movetracker.includes(checkbox)){
+              if(stat === 1){
+                move = move + 1;
+              }
+              else{
+                move = move - 1;
+              }
+              console.log("Total move Purchased: " + move);
+            }
+            //notoriety
+            else if (notorietytracker.includes(checkbox)){
+              if(stat === 1){
+                notoriety = notoriety + 2;
+              }
+              else{
+                notoriety = notoriety - 2;
+              }
+              console.log("Total notoriety Purchased: " + notoriety);
+            }
+            //Proficiencies
+            else if (profstracker.includes(checkbox)){
+              if(stat === 1){
+                profs = profs + 2;
+              }
+              else{
+                profs = profs - 2;
+              }
+              console.log("Total Profs Purchased: " + profs);
+            }
+            //readiness
+            else if (readinesstracker.includes(checkbox)){
+              if(stat === 1){
+                readiness = readiness + 2;
+              }
+              else{
+                readiness = readiness - 2;
+              }
+              console.log("Total readiness Purchased: " + readiness);
+            }
+            //techniques
+            else if (techniquestracker.includes(checkbox)){
+              if(stat === 1){
+                techniques = techniques + 2;
+              }
+              else{
+                techniques = techniques - 2;
+              }
+              console.log("Total techniques Purchased: " + techniques);
+            }
+            //Credits
+            //automatically adds/subtracts 600 credits from characters "attr_credits", and updates the hidden "attr_progression_credits_track" which serves as an extra tracker to see how many times the character have gained credit through Character Progression Purchases if you get unsure.
+            else if (creditstracker.includes(checkbox)){
+              if(stat === 1){
+                credits_tracker = credits_tracker + 1;
+                credits = credits + 600;
+              }
+              else{
+                credits_tracker = credits_tracker - 1;
+                credits = credits + 600;
+              }
+              console.log("Progression Credit Instances Purchased: " + credits_tracker + " for a total of " + credits + " credits.");
+            }
 
             setAttrs({
                 exp_spent: xp_spent,
-                exp: xp_current
+                exp: xp_current,
+                boons_track: boons,
+                focus_track: focus,
+                init_track: init,
+                move_track: move,
+                notoriety_track: notoriety,
+                profs_track: profs,
+                readiness_track: readiness,
+                techniques_track: techniques,
+                credits: credits,
+                progression_credits_track: credits_tracker
             });
         });
     });
