Hc Svnt Dracones 2E: v.1.51 minor fixes

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -1058,7 +1058,7 @@ const inittracker = ["body_stat5b","body_stat11b"];
 
 const techniquestracker = ["mind_stat3a","mind_stat6a","mind_stat9a","mind_stat12a","mind_perceive2a","mind_perceive5a","mind_perceive8a","mind_perceive11a","body_stat2b","body_stat2b","body_stat8b","body_stat2b","body_perceive2a","body_perceive5a","body_perceive8a","community_stat8a","community_stat11a","community_perceive5a","community_perceive8a","community_perceive5a"];
 
-const notorietytracker = ["mind_perceive8b","mind_perceive11b","body_stat6a","body_stat12a","body_perceive5b","body_perceive8b","community_stat2b","community_stat5b","community_stat8b","community_stat11b","community_perceive2b","community_perceive6b","community_perceive8b","community_perceive11b"];
+const notorietytracker = ["mind_perceive8b","mind_perceive11b","body_stat6a","body_stat12a","body_perceive5b","body_perceive8b","community_stat2b","community_stat5b","community_stat8b","community_stat11b","community_perceive2b","community_perceive5b","community_perceive8b","community_perceive11b"];
 
 const creditstracker = ["community_stat3a","community_stat9b","community_stat3a"];
 
@@ -1221,7 +1221,7 @@ checkboxes.forEach(checkbox => {
               }
               else{
                 credits_tracker = credits_tracker - 1;
-                credits = credits + 600;
+                credits = credits - 600;
               }
               console.log("Progression Credit Instances Purchased: " + credits_tracker + " for a total of " + credits + " credits.");
             }
