--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -576,7 +576,7 @@
 
     <div>
       <input type="number" name="attr_stat3" value="3" class="txtfield" disabled="true">
-      <input type="checkbox" name="attr_body_stat7">
+      <input type="checkbox" name="attr_body_stat7" value="1">
     </div>
     <div>
       <span>1 Movement <input type="checkbox" name="attr_body_stat8a" value="1"></span>
@@ -1025,15 +1025,12 @@
 
 const int = score => parseInt(score, 10) || 0;
 
-
 const xp_mind_stat = ["mind_stat1","mind_stat4","mind_stat7","mind_stat10","mind_stat13"];
 const xp_mind_perceive = ["mind_perceive1","mind_perceive4","mind_perceive7","mind_perceive10","mind_perceive13"];
 const xp_body_stat = ["body_stat1","body_stat4","body_stat7","body_stat10","body_stat13"];
 const xp_body_perceive = ["body_perceive1","body_perceive4","body_perceive7","body_perceive10","body_perceive13"];
 const xp_community_stat = ["community_stat1","community_stat4","community_stat7","community_stat10","community_stat13"];
 const xp_community_perceive = ["community_perceive1","community_perceive4","community_perceive7","community_perceive10","community_perceive13"];
-
-
 
 //const counter = ["1","2a","2b", "3a", "3b", "4", "5a","5b", "6a","6b", "7", "8a","8b", "9a","9b", "10", "11a","11b", "12a","12b", "13"];
 
@@ -1042,7 +1039,7 @@ const checkboxes = ["mind_stat1","mind_stat2a","mind_stat2b", "mind_stat3a", "mi
 
 const xp10a = ["mind_stat1","mind_stat2a","mind_stat2b", "mind_stat3a", "mind_stat3b","mind_perceive1","mind_perceive2a","mind_perceive2b", "mind_perceive3a", "mind_perceive3b", "body_stat1","body_stat2a","body_stat2b", "body_stat3a", "body_stat3b","body_perceive1","body_perceive2a","body_perceive2b", "body_perceive3a", "body_perceive3b", "community_stat1","community_stat2a","community_stat2b", "community_stat3a", "community_stat3b","community_perceive1","community_perceive2a","community_perceive2b", "community_perceive3a", "community_perceive3b"];
 
-const xp15a = ["mind_stat4", "mind_stata","mind_stat5b", "mind_stat6a","mind_stat6b", "mind_perceive4", "mind_perceive5a","mind_perceive5b", "mind_perceive6a","mind_perceive6b", "body_stat4", "body_stat5a","body_stat5b", "body_stat6a","body_stat6b", "body_perceive4", "body_perceive5a","body_perceive5b", "body_perceive6a","body_perceive6b", "community_stat4", "community_stat5a","community_stat5b", "community_stat6a","community_stat6b", "community_perceive4", "community_perceive5a","community_perceive5b", "community_perceive6a","community_perceive6b"];
+const xp15a = ["mind_stat4", "mind_stat5a","mind_stat5b", "mind_stat6a","mind_stat6b", "mind_perceive4", "mind_perceive5a","mind_perceive5b", "mind_perceive6a","mind_perceive6b", "body_stat4", "body_stat5a","body_stat5b", "body_stat6a","body_stat6b", "body_perceive4", "body_perceive5a","body_perceive5b", "body_perceive6a","body_perceive6b", "community_stat4", "community_stat5a","community_stat5b", "community_stat6a","community_stat6b", "community_perceive4", "community_perceive5a","community_perceive5b", "community_perceive6a","community_perceive6b"];
 
 const xp20a = ["mind_stat7", "mind_stat8a","mind_stat8b", "mind_stat9a","mind_stat9b", "mind_perceive7", "mind_perceive8a","mind_perceive8b", "mind_perceive9a","mind_perceive9b", "body_stat7", "body_stat8a","body_stat8b", "body_stat9a","body_stat9b", "body_perceive7", "body_perceive8a","body_perceive8b", "body_perceive9a","body_perceive9b", "community_stat7", "community_stat8a","community_stat8b", "community_stat9a","community_stat9b", "community_perceive7", "community_perceive8a","community_perceive8b", "community_perceive9a","community_perceive9b"];
 
@@ -1065,9 +1062,9 @@ const inittracker = ["body_stat5b","body_stat11b"];
 
 const techniquestracker = ["mind_stat3a","mind_stat6a","mind_stat9a","mind_stat12a","mind_perceive2a","mind_perceive5a","mind_perceive8a","mind_perceive11a","body_stat2b","body_stat2b","body_stat8b","body_stat2b","body_perceive2a","body_perceive5a","body_perceive8a","community_stat8a","community_stat11a","community_perceive5a","community_perceive8a","community_perceive5a"];
 
-const notorietytracker = ["mind_perceive8b","mind_perceive11b","body_stat6a","body_stat12a","body_perceive5b","body_perceive8b","community_stat2b","community_stat5b","community_stat8b","community_stat11b","community_perceive2b","community_perceive5b","community_perceive8b","community_perceive11b"];
+const notorietytracker = ["mind_stat3b", "mind_stat6b","mind_perceive8b","mind_perceive11b","body_stat6a","body_stat12a","body_perceive5b","body_perceive8b","community_stat2b","community_stat5b","community_stat8b","community_stat11b","community_perceive2b","community_perceive5b","community_perceive8b","community_perceive11b"];
 
-const creditstracker = ["community_stat3a","community_stat9b","community_stat3a"];
+const creditstracker = ["community_stat3a","community_stat9b"];
 
 checkboxes.forEach(checkbox => {
     on(`change:${checkbox}`, (eventInfo) => {
