--- a/Ambition_Avarice/ambition_avarice.html
+++ b/Ambition_Avarice/ambition_avarice.html
@@ -1,6 +1,7 @@
 <input type="radio" name="attr_tab" class="tab tab1" value="1" checked="checked"><span title="Main"></span>
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Equipment"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="NPC"></span>
+<input type="radio" name="attr_tab" class="tab tab4" value="4"                  ><span title="Misc"></span>
 
 <!--  --------------------------------------------------------------------------------- -->
 <!--  --------------------------- PAGE 1 ---------------------------------------------- -->
@@ -242,30 +243,15 @@
 <!-- IN SIX -->
   <div class="sixes section columnflex nowrap center">
     <label class="title">In Sixes Chances</label>
-    <div class="rowflex nowrap spaced">
-      <input name="attr_sixes1_name" type="text" style="width:60px;" placeholder="Name">
-      <input name="attr_sixes1_info" type="text" style="width:120px;" placeholder="info">
-      <input name="attr_sixes1" type="number" value="2" style="width: 25px;">
-      <button name="roll_sixes1" type="roll" value="&{template:default} {{name=**@{sixes1_name}** (In Sixes)}} {{You attempt: [[1d6cs0cf0>@{sixes1}]] }}  {{( 1 is success, 0 is failure) }}" class="d6"></button>
-    </div>
-    <div class="rowflex nowrap spaced">
-      <input name="attr_sixes2_name" type="text" style="width:60px;" placeholder="Name">
-      <input name="attr_sixes2_info" type="text" style="width:120px;" placeholder="info">
-      <input name="attr_sixes2" type="number" value="2" style="width: 25px;">
-      <button name="roll_sixes2" type="roll" value="&{template:default} {{name=**@{sixes2_name}** (In Sixes)}} {{You attempt: [[1d6cs0cf0>@{sixes2}]] }}  {{( 1 is success, 0 is failure) }}" class="d6"></button>
-    </div>
-    <div class="rowflex nowrap spaced">
-      <input name="attr_sixes3_name" type="text" style="width:60px;" placeholder="Name">
-      <input name="attr_sixes3_info" type="text" style="width:120px;" placeholder="info">
-      <input name="attr_sixes3" type="number" value="2" style="width: 25px;">
-      <button name="roll_sixes3" type="roll" value="&{template:default} {{name=**@{sixes3_name}** (In Sixes)}} {{You attempt: [[1d6cs0cf0>@{sixes3}]] }}  {{( 1 is success, 0 is failure) }}" class="d6"></button>
-    </div>
-    <div class="rowflex nowrap spaced">
-      <input name="attr_sixes4_name" type="text" style="width:60px;" placeholder="Name">
-      <input name="attr_sixes4_info" type="text" style="width:120px;" placeholder="info">
-      <input name="attr_sixes4" type="number" value="2" style="width: 25px;">
-      <button name="roll_sixes4" type="roll" value="&{template:default} {{name=**@{sixes4_name}** (In Sixes)}} {{You attempt: [[1d6cs0cf0>@{sixes4}]] }}  {{( 1 is success, 0 is failure) }}" class="d6"></button>
-    </div>
+    <fieldset class="repeating_sixes">
+      <div class="rowflex nowrap spaced">
+        <input name="attr_name" type="text" style="width:60px;" placeholder="Name">
+        <input name="attr_info" type="text" style="width:110px;" placeholder="info">
+        <input name="attr_sixes" type="number" value="2" style="width: 25px;">
+        <button name="roll_sixes" type="roll" value="&{template:default} {{name=**@{name}** (In Sixes)}} {{You attempt: [[1d6cs0cf0>@{sixes}]] }}  {{( 1 is success, 0 is failure) }}" class="d6"></button>
+      </div>
+    </fieldset>
+
     <div class="note rowflex nowrap">
       <div class="d6"></div>
       <span>equal or lower</span>
@@ -446,6 +432,74 @@
 
   </div>
 
+
+<!-- F types of AC -->
+
+  <div class="ac-types section columnflex nowrap center">
+    <label class="title">AC</label>
+    <div class="rowflex nowrap">
+      <div class="columnflex nowrap">
+        <label class="short">Prone</label>
+        <input name="attr_ac_prone" type="number" value="" placeholder="10">
+      </div>
+      <div class="columnflex nowrap">
+        <label class="short" style="margin-right: 15px;">Suprised</label>
+        <input name="attr_ac_suprised" type="number" value="" placeholder="10">
+      </div>
+      <div class="columnflex nowrap">
+        <label class="short">Touch</label>
+        <input name="attr_ac_touch" type="number" value="" placeholder="10">
+      </div>
+      <div class="columnflex nowrap">
+        <label class="short">Normal</label>
+        <input name="attr_ac" type="number" value="" placeholder="10">
+      </div>    
+    </div>
+
+  </div>
+
+<!-- weapons -->
+
+  <div class="weapons section columnflex nowrap center">
+    <label class="title">Weapons</label>
+    <div class="names rowflex nowrap">
+      <span>Name</span>
+      <span>Damage</span>
+      <span>Range</span>
+      <span>Info</span>
+    </div>
+    <fieldset class="repeating_weapon">
+      <div class="rowflex nowrap">
+        <input name="attr_name" type="text" placeholder="name" style="width:30%;margin-right: 5px;">
+        <input name="attr_damage" type="number" value="" placeholder="1d6" style="width: 20%;">
+        <input name="attr_range" type="text" value="" placeholder="range"  style="width: 20%;">
+        <input name="attr_info" type="text" placeholder="info" style="width: 28%%;">
+      </div>
+    </fieldset>
+  </div>
+
+<!-- armor -->
+
+  <div class="armor section columnflex nowrap center">
+    <label class="title">Armor</label>
+    <div class="names rowflex nowrap">
+      <span>Name</span>
+      <span>AC</span>
+      <span>Sneak</span>
+      <span>Worn?</span>
+      <span>Info</span>
+    </div>
+    <fieldset class="repeating_armor">
+      <div class="rowflex nowrap">
+        <input name="attr_name" type="text" placeholder="name" style="width:30%;margin-right: 5px;">
+        <input name="attr_ac" type="number" placeholder="3" style="width: 15%;margin-right: 4px;">
+        <input name="attr_sneak" type="number" placeholder="0"  style="width: 15%;">
+        <input name="attr_worn" type="checkbox" value="1">
+        <input name="attr_info" type="text" placeholder="info" style="width: 25%;">
+      </div>
+    </fieldset>
+  </div>
+
 <!-- equipment -->
 
   <div class="equip section columnflex nowrap center">
@@ -453,11 +507,11 @@
     <fieldset class="repeating_eq">
       <div class="rowflex nowrap">
         <input name="attr_name" type="text" placeholder="name" style="width:30%;margin-right: 5px;">
-        <input name="attr_info" type="text" placeholder="info" style="width: 67%;">
+        <input name="attr_weight" type="number" placeholder="weight" style="width: 15%;">
+        <input name="attr_info" type="text" placeholder="info" style="width: 52%;">
       </div>
     </fieldset>
   </div>
-
 
 <!-- companions -->
 
@@ -578,6 +632,21 @@
 
 </div>
 
+<!--  --------------------------------------------------------------------------------- -->
+<!--  --------------------------- PAGE 4 ---------------------------------------------- -->
+<!--  --------------------------------------------------------------------------------- -->
+
+
+<div class="tab-content tab4 pg4">
+
+  <div class="section columnflex nowrap center">
+    <label class="title">Magic Failure chance</label>
+    <div class="rowflex nowrap"> 
+      <label><input name="attr_magic_fail" type="number" placeholder="10">%</label>
+    </div>
+  </div>
+
+</div>
 
 <!--  --------------------------------------------------------------------------------- -->
 <!--  --------------------------- Sheet workers --------------------------------------- -->
@@ -618,27 +687,5 @@ stats.forEach(stat => {
         });
     });
 });
-
-/*
-on(`change:con`, () => {
-    getAttrs("con_mod", value => {
-        const con = int(value["con_mod"]);
-        console.log(con);
-        let rest = 0;
-        if (con >= 17) rest = "1d12";
-        else if (con >= 15) rest = "1d10";
-        else if (con >= 13) rest = "1d8";
-        else if (con >= 9) rest = "1d6";
-        else if (con >= 7) rest = "1d4";
-        else if (con >= 5) rest = "1d2";
-        else if (con >= 3) rest = "1";
-        else rest = "1";
-        
-        setAttrs({
-            rest : rest
-        });
-    });
-});
-*/
 
 </script>
