--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1177,13 +1177,13 @@
             <h2 data-i18n="essence">Essence</h2>
           </div>
           <div class="rows repeating-container">
-            <fieldset class="repeating_augementations"><span name="attr_augementation"></span><span class="center" name="attr_rating"></span><span class="center" name="attr_essence"></span>
+            <fieldset class="repeating_augementations"><span name="attr_augmentation"></span><span class="center" name="attr_rating"></span><span class="center" name="attr_essence"></span>
               <input class="collapse-flag" name="attr_display_flag" type="checkbox"/><span class="pictos">i</span>
               <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
               <div class="collapse"><span name="attr_notes"></span></div>
               <div class="settings">
                 <label data-i18n-title="Augmentations" title="Augmentations">
-                  <input name="attr_augementation" placeholder="name" title="@{repeating_augementations_${x}_augementation}" type="text" value=""/>
+                  <input name="attr_augmentation" placeholder="name" title="@{repeating_augementations_${x}_augmentation}" type="text" value=""/>
                 </label>
                 <label data-i18n-title="Rating" title="Rating">
                   <input name="attr_rating" placeholder="0" title="@{repeating_augementations_${x}_rating}" type="number" value=""/>
