--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -27,7 +27,8 @@
 					<li>If critical fail on skill roll, show both associated fail and critical fail notes.</li>
 					<li>
 					    Grimoire Tab - Repeating Spells table. Move <b>REF</b> field to expanded notes area, replace with <b>ON</b> checkbox.
-					    resize Resisted by to add Being Maintained checkbox. NOTE: The penalties will automatically applied to spell levels.
+						Resize Resisted by to add Being Maintained checkbox. Added two boxes to show the total penalties for <b>ON</b> 
+						and <b>Maintained</b>. There also two new options added to the options tab and default sheet values on campaign page.
 					</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
@@ -4391,8 +4392,9 @@
 		<li>Repeating skills and spells. Added checkbox to show success/fail notes on rolltable.</li>
 		<li>If critical fail on skill roll, show both associated fail and critical fail notes.</li>
 		<li>
-		    Grimoire Tab - Repeating Spells table. Move <b>REF</b> field to expanded notes area, replace with <b>ON</b> checkbox.
-		    resize Resisted by to add Being Maintained checkbox.
+			Grimoire Tab - Repeating Spells table. Move <b>REF</b> field to expanded notes area, replace with <b>ON</b> checkbox.
+			Resize Resisted by to add Being Maintained checkbox. Added two boxes to show the total penalties for <b>ON</b> 
+			and <b>Maintained</b>. There also two new options added to the options tab and default sheet values on campaign page.
 		</li>
 	</ul>
 	
